<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/JobTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/JobTitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/JobLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/JobLocation"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/JobDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/JobDeadline"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/JobPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/JobPayment"
        android:textSize="20sp" />
</LinearLayout>