<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn= "navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_employee"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_search_employee"
            android:icon="@drawable/ic_map"
            android:title="Maps" />
        <item
            android:id="@+id/nav_myJobs"
            android:icon="@drawable/ic_myjobs"
            android:title="My Jobs" />
        <item
            android:id="@+id/nav_allJobs"
            android:icon="@drawable/ic_list"
            android:title="All Jobs" />
    </group>
    <item android:title="@string/change_modes">
        <menu>
            <item
                android:id="@+id/nav_switch_employee"
                android:icon="@drawable/ic_switch"
                android:title="@string/menu_switch" />
        </menu>
    </item>
</menu>