<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/JobDisplayDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/JobDisplayLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="3dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/JobDisplayTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/hello_world"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/JobDisplayDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:text="@string/hello_world"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/JobDisplayCreateDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/JobDisplayCreateDateLbl"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/JobCreateDate"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/JobDisplayCreateDate"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/JobDisplayDeadlineLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/JobDisplayDeadlineLbl"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/JobDeadline"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/JobDisplayDeadline"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/JobDisplayDurationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/JobDisplayDurationLbl"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/JobDuration"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/JobDisplayDuration"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/JobDisplayLocationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/JobDisplayLocationLbl"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/JobLocation"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/JobDisplayLocation"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/JobDisplayPaymentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/JobDisplayPaymentLbl"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/JobPayment"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/JobDisplayPayment"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hello_world"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/JobDisplayEquipLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/JobEquip"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/JobDisplayEquip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/hello_world"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/JobDisplayPictureLbl"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/JobPicture"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/JobDisplayPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/hello_world"
            android:textSize="20sp" />

        <Button
            android:id="@+id/taskComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Task Complete" />


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/sidebar_menu" />

</androidx.drawerlayout.widget.DrawerLayout>